1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (String): Remove setLiteralFlag: and getLiteralFlag.

	* StringObject.[hm] ([String_c -getCount], [String_c -count], 
	[String_c -length]): Return unsigned.
	([String_c -lispIn:], [String_c -lispOut:deep:],
	[String_c -hdfIn:], [String_c -hdfOutOut:deep:): New methods.

	* StringObject.m: ([String_c -out:]): Remove.

	* List.[hm]: Make getCountPerBlock return unsigned.

	* InputStream.m: Include StringObject.h.

	* Map.m ([Map_c -hdf5Out:deep:]): Use storeAttributes:value: to
	save a compare function attribute.  Add support for non-object
	keys.
	
1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collection.h (compareCStrings): New function.
	([Map_c -lispOut:deep:], [Map_c -lispInCreate:]): Add support
	for c-strings.
	(COMPARE_{FUNCTION,INT,UNSIGNED,CSTRING,ID}: New macros.
	([Map_c -lispInCreate:], [Map_c -lispOut:deep:]): Use them.
	([Map_c -lispOut:deep:]): Abort if unknown compareFunc.

	* Map.h (compareIDs, compareIntegers, compareUnsignedIntegers,
	compareCStrings): Declare.
	
	* Map.m ([Map_c -lispOut:deep:], [Map_c -hdf5Out:deep:]): Use DSIZE.
	([Map_c -hdf5Out:deep:]): Handle compareFunc of integers differently
	from IDs.

	* Collections.m ([Collection_any -hdf5Out:deep:]): Use DSIZE.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* Map.m ([Map_c -lispOut:deep:]): compareUnsigned ->
	compareUnsignedIntegers

1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collections.h (compareUnsignedIntegers): New function.
	([Map_c -lispOut:deep:], [Map_c -lispInCreate:]): Handle
	compareUnsignedIntegers case.

	* Collection.[hm], Map.[hm]: Always declare hdf5Out:deep:. Don't
	include swarmconfig.h.  Call hdf5_not_available when HAVE_HDF5 not
	defined.  

	* Collection.m, Map.m: Implement deep serialization for 
	hdf5Out:deep:.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.[hm]: Include swarmconfig.h.